# chat

./: .gitignore  readme.md
qt_chat/: qt_chat.pro  server.conf
qt_chat/src/: client.cpp  configreader.cpp  dataencoder.cpp  dataparser.cpp  loginform.cpp  main.cpp  mytime.cpp  readclient.cpp  readthread.cpp  registerform.cpp  user.cpp  widget.cpp  writeclient.cpp
qt_chat/src/include/: client.h  configreader.h  dataencoder.h  dataparser.h  loginform.h  mytime.h  protocolmsg.h  readclient.h  readthread.h  registerform.h  user.h  widget.h  writeclient.h
qt_chat/src/ui/: loginform.ui
vs_server/: CMakeLists.txt
vs_server/src/: main.cpp
vs_server/src/include/: DataProcesser.h  HeadData.h  MySQLConnector.h  MyTime.h  Online.h  UserService.h
